--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
 }
 .homeWrapper>header .headLogo{
     background-image: url(../images/logo_hkjc.png);
-    width: 25%;
+    width: 222px;
     height:65px;
     float: left;
 }
@@ -21,10 +21,36 @@
 }
 .homeWrapper>nav>ul.ulNav{
     background-color: rgba(228, 228, 228, 1);
-    float: left;
+    text-align: center;
+    margin-bottom: 0;
 }
 .homeWrapper>nav>ul.ulNav>li{
-    width:25%;
+    width: 243px;
+    float: left;
+    height: 27px;
+    line-height: 27px;
+    position: relative;
+    cursor: pointer;
+}
+/*.homeWrapper>nav>ul.ulNav>li:hover{
+    text-decoration: underline;
+}*/
+.homeWrapper>nav>ul.ulNav>li>ul.subMenu{
+    display: none;
+}
+.homeWrapper>nav>ul.ulNav>li:hover>ul.subMenu{
+    display: block;
+    position: absolute;
+    top: 27px;
+    left: 0;
+    z-index: 100;
+    width: 260px;
+    text-align: left;
+    padding-left: 10px;
+    background: rgba(228, 228, 228, 1);
+}
+.homeWrapper>nav>ul.ulNav>li>ul.subMenu>li.subMenuItem:hover{
+    text-decoration: underline;
 }
 .homeWrapper>nav>ul.ulNav>li:nth-child(1),.homeWrapper>nav>ul.ulNav>li:nth-child(2),.homeWrapper>nav>ul.ulNav>li:nth-child(3){
     border-right:solid 1px white;
