--- a/css/header.css
+++ b/css/header.css
@@ -2,10 +2,15 @@
     margin:auto;
 }
 header .headLogo{
-    background-image: url(../images/logo_hkjc.png);
+    background: url(../images/logo_hkjc.png) no-repeat 0px 15px;
     width: 222px;
-    height:65px;
+    height:91px;
     float: left;
+}
+header .headLogo>a{
+    width:100%;
+    height:100%;
+    display: block;
 }
 header .headRight{
     float: right;
@@ -14,7 +19,7 @@ header .headRight{
     background-image: url(../images/headerRight.png);
 }
 header .headerBottom{
-    background-image: url(../images/headerBanner.png);
+    background-image: url(../images/headerBanner.jpg);
     height: 130px;
 }
 nav>ul.ulNav{
