--- a/css/Introduction.css
+++ b/css/Introduction.css
@@ -419,10 +419,13 @@ body p {
     border-bottom: 1px dotted #cfcfcf;
     padding: 3px 0;
 }
-
+#corporate-container .tableArea{
+    width: 55%;
+    padding: 15px 15px 0 15px;
+    border: 1px solid #ebebeb;
+}
 #corporate-container>div.online_video {
-    width: 500px;
-    height: 500px;
+    width: 40%;
 }
 
 #dateStart,
@@ -433,15 +436,16 @@ body p {
 
 .searchButton {
     display: inline-block;
-    background: dimgray;
+    background: #ffa800;
     width: 60px;
     height: 20px;
     line-height: 18px;
     text-align: center;
     border: 1px solid;
     cursor: pointer;
-    color: white;
-    border-radius: 7px;
+    color: #4f493e;
+    border-radius: 3px;
+    font-weight: 600;
 }
 
 .searchButton:hover {
@@ -451,17 +455,28 @@ body p {
 }
 
 .openData table {
-    border-right: 1px solid;
-    border-bottom: 1px solid;
+    border-right: 1px solid #254fa1;
+    border-bottom: 1px solid #254fa1;
     width: 100%;
 }
 
 .openData table th,
 .openData table td {
     text-align: center;
-    border-left: 1px solid;
-    border-top: 1px solid;
+    border-left: 1px solid #254fa1;
+    border-top: 1px solid #254fa1;
     padding: 5px;
+    background: #ffffff;
+    font-size: 16px;
+}
+
+.openData table td {
+    color: #424242;
+}
+
+.openData table th {
+    background-color: #254fa1;
+    color: #ffffff;
 }
 
 .openData table th:nth-child(odd),
@@ -478,14 +493,109 @@ body p {
     margin-top: 15px;
 }
 
-i{
+i {
     font-style: normal;
 }
-.openData table td i{
-    background: papayawhip;
+
+.openData table td i {
+    background: #ffffff;
     display: inline-block;
-    width: 20px;
+    width: 22px;
     text-align: center;
-    height: 20px;
-    line-height: 20px;
+    height: 22px;
+    line-height: 22px;
+    font-weight: bold;
+    color: #636363;
+    border:1px solid #bcbcbc;
+    border-radius: 2px;
+    box-sizing: content-box;
+    margin: 0 5px;
+}
+
+.openData table td i:nth-child(1),
+.openData table td i:nth-child(2),
+.openData table td i:nth-child(3) {
+    color: #fff;
+}
+
+.openData table td i:nth-child(1) {
+    background: #ff3c00;
+}
+
+.openData table td i:nth-child(2) {
+    background: #ff9600;
+}
+
+.openData table td i:nth-child(3) {
+    background: #613d0b;
+}
+.searchArea .dateLabel{
+    color:#111111;
+}
+.online_video .videoWrapper{
+    width: 100%;
+}
+.online_video .videoWrapper .videoTitle{
+    font-size: 18px;
+    background: #044187;
+    color: #fff;
+    width: 70%;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-top-left-radius:8px;
+}
+.online_video .videoWrapper .videoTime{
+    background:#000000;
+    color: #c9b385;
+    width: 30%;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-top-right-radius: 8px;
+}
+.online_video .videoWrapper .videoContent{
+    background: #424242;
+    height: 310px;
+    width: 100%;
+}
+.online_video .videoWrapper .videoIssue{
+    background: #000000;
+    height: 24px;
+    line-height: 24px;
+    text-align: right;
+    padding-right: 8px;
+    color: #c9b385;
+}
+.online_video .videoWrapper .videoTip{
+    background: #044187;
+    height: 35px;
+    line-height: 35px;
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+.remark p{
+    color:#000000;
+    margin: 0;
+    color: #222222;
+    font-weight: bold;
+}
+.m0_2{
+    margin: 0 2px;
+}
+.openData .page{
+    width: 100%;
+    text-align: center;
+}
+.openData .page .num{
+    padding: 5px 8px;
+    display: inline-block;
+    -webkit-font-smoothing: antialiased;
+    font-weight: 600;
+}
+.openData .page .num.on{
+    color: #022169;
 }
